@@ -1,3 +1,1 @@
 - Open files > 2G.
-
-- Add material about ne on the Wikipedia text-editor comparison page. In particular, the claim that it doesn't run on Windows is wrong.
