@@ -806,11 +806,15 @@ int do_action(buffer *b, action a, int c, unsigned char *p) {
 			buffer *dup = get_buffer_named(p);
 
 			/* 'c' -- flag meaning "Don't prompt if we've ever responded 'yes'." */
-			if (!dup || dup == b || (dprompt && !c ) || (dprompt = request_response(b, info_msg[SAME_NAME], FALSE))) {
+			if (!dup || dup == b || (dprompt && !c) || (dprompt = request_response(b, info_msg[SAME_NAME], FALSE))) {
 				b->syn = NULL; /* So that autoprefs will load the right syntax. */
 				if (b->opt.auto_prefs && extension(p)) load_auto_prefs(b, extension(p));
 				error = load_file_in_buffer(b, p);
-				if (error != FILE_IS_MIGRATED && error != FILE_IS_DIRECTORY && error != OUT_OF_MEMORY) change_filename(b, p);
+				if (error != FILE_IS_MIGRATED 
+					&& error != FILE_IS_DIRECTORY 
+					&& error != IO_ERROR 
+					&& error != FILE_IS_TOO_LARGE 
+					&& error != OUT_OF_MEMORY) change_filename(b, p);
 				print_error(error);
 				reset_window();
 				return OK;
