@@ -81,6 +81,7 @@ enum error {
 	FILE_IS_READ_ONLY,
 	FILE_IS_MIGRATED,
 	FILE_IS_DIRECTORY,
+	FILE_IS_TOO_LARGE,
 	STOPPED,
 	IO_ERROR,
 	STRING_IS_EMPTY,
